# demo-monorepo

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: index.py  index2.py  main.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: layout.tsx
frontend/src/components/: chat.tsx  markdown.tsx  multimodal-input.tsx  overview.tsx
